Add create user endpoint
