# api.yml
@@ -17,6 +17,34 @@ info:
 servers:
   - url: http://localhost
 paths:
+  /user:
+    post:
+      summary: Endpoint to create new user
+      operationId: userRegister
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: "#/components/schemas/Users"
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/CreateResponse"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
   /hello:
     get:
       summary: This is just a test endpoint to get you started. Please delete this endpoint.
@@ -33,7 +61,7 @@ paths:
           content:
             application/json:    
               schema:
-                $ref: "#/components/schemas/HelloResponse"
+                $ref: "#/components/schemas/Response"
         '404':
           description: Not found
           content:
@@ -42,7 +70,27 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
-    HelloResponse:
+    Users:
+      type: object
+      properties:
+        phoneNumbers:
+          type: string
+          example: 08123342446
+        fullName:
+          type: string
+          example: Fazar
+        passwords:
+          type: string
+          example: password
+    CreateResponse:
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          type: integer
+          format: int64
+    Response:
       type: object
       required:
         - message
